--- a/index.css
+++ b/index.css
@@ -6,11 +6,14 @@ body {
 
 header {
   background-color: #FBFFF4;
-  height: 100%;
+  height: 80px;
   width: 100%;
 }
 
 main {
+  display: flex;
+  flex-flow: column wrap;
+
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
@@ -18,6 +21,25 @@ main {
 
 footer {
   background-color: #DAEEEF;
-  height: 100%;
+  height: 80px;
   width: 100%;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+}
+
+.item {
+  height: 100px;
+  width: 100px;
+  margin: 5px;
+  background-color: #FCF2EC;
+  flex: 100px;
+}
+
+.stuff {
+  align-self: flex-end;
 }
